home-assistant/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-service
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
  - name: http
    port: 8123
    targetPort: 8123
    protocol: TCP
  type: ClusterIP
